--- a/JobBoardAPI/Properties/launchSettings.json
+++ b/JobBoardAPI/Properties/launchSettings.json
@@ -22,7 +22,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7229;http://localhost:5098",
       "environmentVariables": {
