--- a/JobBoardAPI/nlog.config
+++ b/JobBoardAPI/nlog.config
@@ -14,10 +14,13 @@
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 		<target xsi:type="File" name="exceptions" fileName="d:\JobBoardAPILogs\nlog-all-exceptions-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+		<target xsi:type="File" name="request-time" fileName="d:\JobBoardAPILogs\request-time.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 	</targets>
 
 	<rules>
 		<logger name="*" minLevel="Trace" writeTo="allfile" />
 		<logger name="JobBoardAPI.*" minLevel="Error" writeTo="exceptions" />
+		<logger name="JobBoardAPI.Middleware.RequestTimeMiddleware" minLevel="Trace" writeTo="request-time" />
 	</rules>
 </nlog>
