--- a/JobBoardAPI/appsettings.json
+++ b/JobBoardAPI/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Authentication": {
+        "JwtKey": "dF3gG4hH5iJ6jK7lM8nN9oP0qR1sT2tU3vW4xY5zZ6aB7cD8",
+        "JwtExpireDays": 15,
+        "JwtIssuer": "http://jobboardapi.com"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
